tests/paczka1/small_fuzzy/97561771.err
Error in line 1: kIEeIdk3wyc S516 57,5
Error in line 6: Pl3pH S416 14,9
Error in line 9: akt A155 38,-
Error in line 11: kIEeIdk3wyc A155 14,0
